# nerv-clock

./: .eslintrc.json  .gitignore  CODE_ANALYSIS_REPORT.md  COMPLETION_SUMMARY.md  JAVA_IMPLEMENTATION.md  QUICK_START.md  README.md  build-all.sh  package-lock.json  package.json  vitest.config.js
.github/: commit-template.txt
.github/workflows/: ci.yml  release.yml
android/: build.sh  settings.gradle  test.sh
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: clock.js  style.css  widget.html
android/app/src/main/java/com/nerv/clock/: BatteryOptimizationHelper.java  BootReceiver.java  LauncherDetector.java  NervClockActivity.java  (+4 more)
android/app/src/main/res/drawable/: button_active.xml  button_normal.xml  corner_bl.xml  corner_br.xml  corner_tl.xml  corner_tr.xml  ic_launcher.xml  ic_notification.xml  nerv_background.xml  status_light.xml  warning_stripes.xml  widget_preview.xml
android/app/src/main/res/layout/: floating_clock.xml  widget_canvas.xml  widget_layout.xml  widget_webview.xml
android/app/src/main/res/layout-v31/: widget_canvas.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-v31/: themes.xml
android/app/src/main/res/xml/: widget_info.xml
android/app/src/main/res/xml-v31/: widget_info.xml
coverage/: clock-logic.js.html  coverage-final.json  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: display.rs  main.rs
tests/: clock-logic.js  clock.test.js  setup.js
ui/: clock.js  index.html  style.css
(+17 files in other folders)
