[package]
name = "nerv-clock"
version = "1.0.9"
description = "NERV Chronometer - Evangelion Style Clock Widget"
authors = ["NERV"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[profile.test]
opt-level = 0

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
